fix contrast issue

--- a/FormAkademisk/styles/head.less
+++ b/FormAkademisk/styles/head.less
@@ -116,6 +116,7 @@
     .pkp_navigation_primary_row {
         background-color: @primary-nav-bg;
         color: @primary-nav-fg;
+        color: black;
         #navigationPrimary {
             li {
                 text-shadow: none;
@@ -128,6 +129,7 @@
     }
     .pkp_search .search_prompt {
         color: @primary-nav-fg;
+        color: black;
     }
 }
 
